# AutonomAuth

./: COMMERCIAL_LICENSE  README.md
autonomauth/: Cargo.toml
autonomauth/src/: error.rs  error_macros.rs  interops.rs  lib.rs  utils.rs
autonomauth/src/crypto/: challenge.rs  key_derivation.rs  mod.rs  signatures.rs
autonomauth/src/models/: common.rs  lib.rs  mod.rs  profile.rs  user.rs  utils.rs
autonomauth/src/storage/: autonomi.rs  mod.rs
docs/: api-reference.md  implementation-guide.md  user-guide.md
