[package]
name = "autonomauth"
version = "0.1.0"
edition = "2021"
authors = ["AutonomAuth Team"]
description = "Decentralized authentication system using the Autonomi network"
license = "MIT"
repository = "https://github.com/autonomauth/autonomauth"
readme = "README.md"
keywords = ["authentication", "decentralized", "identity", "autonomi", "cryptography"]
categories = ["authentication", "cryptography", "web-programming"]

[dependencies]
# Core dependencies
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
ed25519-dalek = "2.0"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
hkdf = "0.12"
base64 = "0.21"
hex = "0.4"

# Error handling
thiserror = "1.0"
log = "0.4"
tracing = "0.1"

# Networking and web
url = "2.4"
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"

# Utilities
chrono = "0.4"
uuid = { version = "1.4", features = ["v4", "serde"] }
regex = "1.9"
qrcode = "0.12"
image = "0.24"

# Autonomi network SDK
autonomi = { version = "0.1", path = "../autonomi" }

[dev-dependencies]
mockall = "0.11"
criterion = "0.5"
proptest = "1.2"
test-case = "3.1"
wiremock = "0.5"
rstest = "0.18"

[[bench]]
name = "crypto_operations"
harness = false

[[bench]]
name = "storage_operations"
harness = false

[features]
default = ["std", "webauthn"]
std = []
webauthn = []
testutils = []
minimal = []
wasm = ["getrandom/js"]

[workspace]
members = [
    ".",
    "autonomauth-server",
    "autonomauth-app",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 0
debug = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
